[Task - See 'WEBSITE-SCRAPING-Truthfinder.com' mindmap](https://drive.google.com/file/d/16LXDHxf6q1Repj1E2KlCpvZRVnLClDjK/view?usp=drive_link) (['mount path'](google-drive://mayou.nkensa@gmail.com/GVfsSharedWithMe/0B39Sj9mqtvSyM2NlZjZjZWYtNGVjZC00NTU0LTkzMWUtNGIzZjVmNTgyMTc4/0B39Sj9mqtvSycEVjTV9pZllfUzQ/0B39Sj9mqtvSyTzdtakJ1RW41am8/1cVkUyxtFhjCWj-D5u--Q8AwOqpSfC51J/1Qm18Vv2T-N092weQNiCMIISKS7lga7hr/1I17iJ_UagHNNPgQTM8LeZbaQUQCU7kI_/1y4aqHqRC3lLIkkz6FYHNYOuv8TJRvsPy/1JDBULfFjCeXVbU98R0qMj_kbA4ZQCFZa/1Qnaumo16wPlw82PVMOApqMURsYqJFeKQ/1axsRJhxUnUr17IQUkIzy70XD_cN4QFE7) - Webscraper demo implemented | Refactoring in place for config controlled process | TESTED, ADJUSTED, OK... | First full webscrape and webscrapes batch implemented and tested, to be reviewed... | Corrections + Adding firstName+lastName inputs sequenced + assertion for process interruption (SAFEKEEPING, not validated) | Adjustments, little cleanup... | Taskhandling implementation :: (1. cache, 2. create task handler, 3. create webscrape method) done → Next: 4. create api methods, 5. test, validate...| 12th Done → Deploying... | Demo / unfinished prototype version ready for deployment on Pyany :: PROJECT PUT ON HOLD for organizing the continuation... | Version 0.5 completed :: First prototype... | Pushing to zip and deploy on Pyany... | Connected with Railway > Deploying... : NOT OK | Taskhandling / Thread max and termination updated > Deployment attempt... | Local, testing new Taskhandler threading: OK, running, to be checked... | ALL FIXED :: Multithreading, Interface issues, export to CSV... NEXT → Deploy on webserver...

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,6 +4,13 @@
 
         <div style="margin: 5em auto 5em 10em; padding: 5em; color: green; border: 1px solid green; text-align: center; font-size: 1.5em;">
             <a href="{% url 'webscrape' %}" id="webscrape">WEBSCRAPING</a>
+            <br/><a href="{% url 'webscrape_data' %}" id="webscrape-data">data</a>
         </div>
+
+        <style>
+            a#webscrape-data {
+                font-size: .5em;
+            }
+        </style>
 
 {% endblock content %}
