--- a/webscraping/templates/unicorn/webscrape/row.html
+++ b/webscraping/templates/unicorn/webscrape/row.html
@@ -119,6 +119,11 @@ n btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
                 {% if webscrape.task_queue %}
                     <small><span class="fa fa-list text-green-900"></span></small>
                 {% endif %}
+                {% if webscrape.task_attempts >= 0 %}
+                    <small><span class="text-green-900">
+                        ({{ webscrape.task_attempts }})
+                    </span></small>                
+                {% endif %}
             </p>
         </td>
 
@@ -188,7 +193,9 @@ n btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
             {% else %}
                 <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-md">
-                    {{ webscrape.city }}
+                    {% if webscrape.city %}
+                        {{ webscrape.city }}
+                    {% endif %}
                 </font>
             {% endif %}
         </td>
@@ -212,7 +219,9 @@ n btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
             {% else %}
                 <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-sm float-right">
-                    {{ webscrape.state }}
+                    {% if webscrape.state %}
+                        {{ webscrape.state }}
+                    {% endif %}
                 </font>
             {% endif %}
         </td>
